---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.provenance.document.to_string()
---
[project]
name = "foo"
channels = ["conda-forge", "https://custom.com/channel", { channel = "prioritized", priority = 12 }, { channel = "prioritized2", priority = -12 }]
platforms = ["linux-64", "win-64"]

[dependencies]

[feature.test]
channels = ["test", "test2"]

[feature.test.dependencies]

[feature.cuda]
channels = ["nvidia"]
